--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,21 +1,31 @@
-
-
 <!--<div id="conteneurHaut" style="background-color: black;  text-align: center;">
 <div id="conteneurRuban1" style="display: flex;  justify-content: left;  background-color: black;"> -->
 
-    <div style="background-color: black;">
+
+
+<!--  <div style="background-color: black;">
 
     <div class="row" id="conteneurRuban1_1"  style=" text-align: center; ">
-        <div class="col-sm-6"><img class="img-responsive" role="presentation"
+      <div class="col-sm-6"><img class="img-responsive" role="presentation"
                 src="https://phonetastikbucket.s3.eu-west-3.amazonaws.com/ruban.PNG" width="500" height="90"  style=" text-align: center; " /></div>
         <div class="col-sm-6"> <a href="tel:+33767226264"><img class="img-responsive" role="presentation"
                     src="https://phonetastikbucket.s3.eu-west-3.amazonaws.com/numeroTel.PNG" width="500" height="90" style=" text-align: right; " /></a></div>
     </div>
     
-    </div>
+    </div>-->
 
 <!--</div>
 </div>-->
+
+
+<div>
+    <img src="https://phonestore.s3.eu-west-3.amazonaws.com/banderole_phonetastik.png" class="img-fluid" />
+</div>
+
+
+
+
+
 
 
 
@@ -90,7 +100,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <div class="conteneurAvis" style="width: 400px; height: 200px; padding: 15px; text-align: center; background-color: rgb(255, 240, 240); box-shadow: 10px 10px 5px lightblue;
+                <div class="conteneurAvis" style="width: 350px; height: 200px; padding: 15px; text-align: center; background-color: rgb(255, 240, 240); box-shadow: 10px 10px 5px lightblue;
                  margin: 0 auto;  margin-bottom: 10px;">
                     <h2>Boma Dickies</h2>
                     <span class="fa fa-star checked"></span>
@@ -106,7 +116,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="conteneurAvis" style="width: 400px; height: 200px; padding: 15px; text-align: center; background-color: rgb(255, 240, 240); box-shadow: 10px 10px 5px lightblue;
+                <div class="conteneurAvis" style="width: 350px; height: 200px; padding: 15px; text-align: center; background-color: rgb(255, 240, 240); box-shadow: 10px 10px 5px lightblue;
                 margin: 0 auto;  margin-bottom: 10px;">
                     <h2>Camille Piekfrru</h2>
                     <span class="fa fa-star checked"></span>
@@ -123,7 +133,7 @@
             </div>
 
             <div class="carousel-item">
-                <div class="conteneurAvis" style="width: 400px; height: 200px; padding: 15px; text-align: center; background-color: rgb(255, 240, 240); box-shadow: 10px 10px 5px lightblue;
+                <div class="conteneurAvis" style="width: 350px; height: 200px; padding: 15px; text-align: center; background-color: rgb(255, 240, 240); box-shadow: 10px 10px 5px lightblue;
                 margin: 0 auto;  margin-bottom: 10px;">
                     <h2>Christian Garde</h2>
                     <span class="fa fa-star checked"></span>
@@ -142,7 +152,7 @@
                 </div>
             </div>
 
-            <div class="carousel-item" style="width: 400px; height: 200px; padding: 15px; text-align: center; background-color: rgb(255, 240, 240); box-shadow: 10px 10px 5px lightblue;
+            <div class="carousel-item" style="width: 350px; height: 200px; padding: 15px; text-align: center; background-color: rgb(255, 240, 240); box-shadow: 10px 10px 5px lightblue;
             margin: 0 auto;  margin-bottom: 10px;">
                 <div class="conteneurAvis">
                     <h2>Vincent</h2>
@@ -174,101 +184,103 @@
     </div>
 </fieldset>
 
-    <div id="containerMap" style="  display: flex; justify-content: center; align-items: center; margin-top : 20px ;">
-		<iframe
-			src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10098.115047984049!2d2.2572631!3d50.74722850000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dcf911c4ab1cc9%3A0xa88c1ccdd02f429c!2sPhonetastiK!5e0!3m2!1sfr!2sfr!4v1668540559326!5m2!1sfr!2sfr"
-			width="1880" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-			referrerpolicy="no-referrer-when-downgrade"></iframe>
-	</div>
+<div id="containerMap" style="  display: flex; justify-content: center; align-items: center; margin-top : 20px ;">
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10098.115047984049!2d2.2572631!3d50.74722850000002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dcf911c4ab1cc9%3A0xa88c1ccdd02f429c!2sPhonetastiK!5e0!3m2!1sfr!2sfr!4v1668540559326!5m2!1sfr!2sfr"
+        width="1880" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
 
-    <div class="footerCss" style=" background-color:black; color :white;text-align : center;">
-		<div class="row" id="rowFooter">
-			<div class="col-sm-4"></div>
-			<div class="col-sm-4"></div>
-			<div class="col-sm-4"></div>
-		</div>
-	</div>
-	
-	<div class="footerCss" style=" background-color:black; color :white;text-align : center;">
+<div class="footerCss" style=" background-color:black; color :white;text-align : center;">
+    <div class="row" id="rowFooter">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
+    </div>
+</div>
 
-<!-- anciennement la row ci dessous avait id rowFooter-->
+<div class="footerCss" style=" background-color:black; color :white;text-align : center;">
 
-		<div class="row">
+    <!-- anciennement la row ci dessous avait id rowFooter-->
 
-			<div class="col-sm-4" id="containerLogo">
+    <div class="row">
 
-		
-				<img role="presentation" src="https://phonetastikbucket.s3.eu-west-3.amazonaws.com/logoFinal.PNG" width="120" height="120" />
-			</div>
+        <div class="col-sm-4" id="containerLogo">
 
 
-
-
-			<div class="col-sm-4">
-				<a href="#">
-					<h3>Phonetastik</h3>
-				</a>
-				<p>Adresse : 8 Rue d'Arras, 62500 Saint-Omer</p>
-				<p>
-					<a href="tel:+33767226264">
-						<i class="glyphicon glyphicon-earphone" style="font-size:24px"></i>
-						07 67 22 62 64
-					</a>
-				</p>
-			</div>
-
-			<div class="col-sm-4">
-
-				<div>
-					
-		<button type="button" class="btn-lg btn-link" data-toggle="modal" data-target="#myModal" style="background-color: black;">Mentions légales</button>
-
-		<!-- Modal -->
-		<div class="modal fade" id="myModal" role="dialog">
-			<div class="modal-dialog">
-
-				<!-- Modal content-->
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h4 class="modal-title" style="color:red; font-weight: bolder; font-size:2.5em;">Mentions légales</h4>
-					</div>
-					<div class="modal-body" style="color:black; font-size:1em;">
-						<p style="color:black; font-size:1.5em;"> En vertu de l'article 6 de la loi n°2004-575 du 21 juin 2004 pour la confiance dans
-							l'économie numérique, il est précisé aux utilisateurs du site Internet
-							https://www.phonetastik-saintomer.fr l'identité des différents intervenants dans le cadre de
-							sa réalisation et de son suivi :</p>
-							
-							<ul>
-							<li>PHONETASTIK</li>
-							<li>FJ : Affaire personnelle commerçant</li>
-							<li>Capital social de : [CAPITAL]</li>
-							<li>TVA : [TVA]</li>
-							<li>SIREN : ? </li>
-							<li> 8 rue d'Arras , 62500 Saint-Omer</li>
-							
-							</ul>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-					</div>
-				</div>
-
-			</div>
-		</div>
-
-				</div>
-
-				<div>
-					<p>Mardi au Vendredi 10:00-12:00 , 14:00-19:00</p>
-					<p>Samedi 10:00-12:00 , 14:00-19:00</p>
-				</div>
-
-			</div>
-
-		</div>
-	</div>
+            <img role="presentation" src="https://phonetastikbucket.s3.eu-west-3.amazonaws.com/logoFinal.PNG"
+                width="120" height="120" />
+        </div>
 
 
 
+
+        <div class="col-sm-4">
+            <a href="#">
+                <h3>Phonetastik</h3>
+            </a>
+            <p>Adresse : 8 Rue d'Arras, 62500 Saint-Omer</p>
+            <p>
+                <a href="tel:+33767226264">
+                    <i class="glyphicon glyphicon-earphone" style="font-size:24px"></i>
+                    07 67 22 62 64
+                </a>
+            </p>
+        </div>
+
+        <div class="col-sm-4">
+
+            <div>
+
+                <button type="button" class="btn-lg btn-link" data-toggle="modal" data-target="#myModal"
+                    style="background-color: black;">Mentions légales</button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title" style="color:red; font-weight: bolder; font-size:2.5em;">
+                                    Mentions légales</h4>
+                            </div>
+                            <div class="modal-body" style="color:black; font-size:1em;">
+                                <p style="color:black; font-size:1.5em;"> En vertu de l'article 6 de la loi n°2004-575
+                                    du 21 juin 2004 pour la confiance dans
+                                    l'économie numérique, il est précisé aux utilisateurs du site Internet
+                                    https://www.phonetastik-saintomer.fr l'identité des différents intervenants dans le
+                                    cadre de
+                                    sa réalisation et de son suivi :</p>
+
+                                <ul>
+                                    <li>PHONETASTIK</li>
+                                    <li>FJ : Affaire personnelle commerçant</li>
+                                    <li>Capital social de : [CAPITAL]</li>
+                                    <li>TVA : [TVA]</li>
+                                    <li>SIREN : ? </li>
+                                    <li> 8 rue d'Arras , 62500 Saint-Omer</li>
+
+                                </ul>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <div>
+                <p>Mardi au Vendredi 10:00-12:00 , 14:00-19:00</p>
+                <p>Samedi 10:00-12:00 , 14:00-19:00</p>
+            </div>
+
+        </div>
+
+    </div>
+</div>
