--- a/src/app/succes/succes.component.html
+++ b/src/app/succes/succes.component.html
@@ -4,6 +4,6 @@
 </div>
 
 <div>
-    <a *ngIf="authService.isAdmin()" style="margin-top: 50px"   class="btn btn-link" href="/employes">Retour à la liste des employes</a>
-    <a *ngIf="authService.isEmploye()" style="margin-top: 50px"   class="btn btn-link" href="/usagers">Retour à la liste des clients</a>
+    <a *ngIf="authService.isAdmin()" style="margin-top: 50px"   class="btn btn-link" [routerLink]="['/employes']">Retour à la liste des employes</a>
+    <a *ngIf="authService.isEmploye()" style="margin-top: 50px"   class="btn btn-link" [routerLink]="['/usagers']">Retour à la liste des clients</a>
 </div>
